2003-05-09    <johan@balder>

	* src/SDCCglue.c: fixed bug #597940

2003-05-05  Karl Bongers(apply patches from Martin Helmling)

	* debugger/mcs51/sdcdb.c,simi.c,cmd.c,symtab.c and .h files.
  cache sfr, optimize next,step, fix off by one sourceline,
  support ddd list function.
	* sim/ucsim/cmd.src/newcmd.cc - small fix for sdcdb use.

2003-05-04  Bernhard Held <bernhard@bernhardheld.de>

	* support/regression/HTMLgen.py: added compare_s2f()
	* support/regression/Makefile: redo 1.27
	* support/regression/generate-cases.py: redo 1.5

2003-04-30  Bernhard Held <bernhard@bernhardheld.de>

	* support/regression/tests/float.c: workaround 33 bit hex constant
	* support/regression/tests/simplefloat.c: fix division for host

2003-04-29  Scott Dattalo  <scott@dattalo.com>

	* src/pic/pcoderegs.c Applied patch from Jim Hawkridge <jim@jimhawkridge.uk.eu.org>
	that tame's the PIC's over-aggressive optimizer.

2003-04-29  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	 * src.dsw, link/z80/aslink.h, link/z80/linkz80.dsp: z80 linker
	 support for MSVC.
	 
2003-04-29  Kevin Vigor <kevin@vigor.nu>

	Initial support for DS80C400. "Hello world" runs on TINIm400 
	(with polled I/O).

2003-04-28  Karl Bongers(apply patches for Martin Helmling)

	 * debugger/mcs51/sdcdb.c,simi.c,cmd.c,symtab.c and .h files.
	 * Some notes on ddd usage added in debugger/README
	 Martin Helmling adding more features and fixes for ddd GUI debugger.
	 Code added for nexti, stepi, up, down, and other adjustments.

2003-04-28  Scott Dattalo  <scott@DATTALO.COM>

	* src/pic/pCodepeep.c non-wildcard asmops are now handled
	* src/pic/peeph.def Added two rules to optimize carry manipulation
	* src/pic/* removed debug printfs

2003-04-28  Bernhard Held <bernhard@bernhardheld.de>

	* debugger/mcs51/cmd.c: added header newalloc.h

2003-04-26  Bernhard Held <bernhard@bernhardheld.de>

	* as/Makefile: new EXEEXT
	* as/z80/Makefile: remove trailing slash of BUILDIR
	* as/z80/clean.mk: new EXEEXT